Adiciona nombre y foto

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="images/git.jpg">
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQF3isjh8rgiaA/profile-displayphoto-shrink_200_200/0?e=1609977600&v=beta&t=8BWGAncR8g-cc_VeRp17wvnT1xznocj_w8438WjUDJ4">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          Patricia Avella
         </h1>
       </div>
       <div class="comunidad-autoria">
