--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="comunidad-autoria">
         <div class="nombre">
           <!-- 2º Commit - Tu perfil Web -->
-          <p>Escribe tu perfil web</p>
+          <p>Ingeniera de Sistemas - Docente universitaria</p>
         </div>
       </div>
     </section>
