--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
     </section>
     <ul>
       <li>
-        <a href="#" target="_blank">
+        <a href="https://www.facebook.com/patricia.avella" target="_blank">
           <!-- 3º Commit - Redes Sociales -->
           <p>Facebook</p>
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="https://twitter.com/PattyAvella" target="_blank">
           <p>Twitter</p>
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/pattyavella/" target="_blank">
           <p>LinkedIN</p>
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="https://github.com/cpavella" target="_blank">
           <p>GitHub</p>
         </a>
       </li>
