--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
-      <p>Tu descripción</p>
+      <p>Trabajo como docente del área de programación en la Universidad de Boyacá</p>
     </div>
 
     <div class="bloque">
