Cambio a Foto de facebook

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQF3isjh8rgiaA/profile-displayphoto-shrink_200_200/0?e=1609977600&v=beta&t=8BWGAncR8g-cc_VeRp17wvnT1xznocj_w8438WjUDJ4">
+        <img src="https://scontent-bog1-1.xx.fbcdn.net/v/t1.0-9/10999497_10153121842211460_2442478801342160268_n.jpg?_nc_cat=100&ccb=2&_nc_sid=09cbfe&_nc_ohc=XdngGkp-lxYAX_jGCmG&_nc_ht=scontent-bog1-1.xx&oh=65fe2bb040bbbdf9189dce05bb592d5a&oe=5FD00C58">
         <h1 class="sidebar_information_title">
           Patricia Avella
         </h1>
